k8s/deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-demo
  labels:
    app.kubernetes.io/name: task-demo
    app.kubernetes.io/part-of: k8s-task-demo
