k8s/deploy/k8s/41-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
  namespace: task-demo
  labels:
    app.kubernetes.io/name: task-app
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: k8s-task-demo
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: task-app
      app.kubernetes.io/component: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: task-app
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: k8s-task-demo
    spec:
      serviceAccountName: task-app
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 20
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
      containers:
        - name: app
          image: task-app:dev
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          startupProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 48Mi
            limits:
              cpu: 300m
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
