k8s/deploy/k8s/20-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: task-demo
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: k8s-task-demo
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
