k8s/deploy/k8s/42-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-app
  namespace: task-demo
  labels:
    app.kubernetes.io/name: task-app
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: k8s-task-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: task-app
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 80
      targetPort: http
